# dotfiles

windows/: .gitconfig  .kattisrc  PSCoreDevShell.ps1  _gvimrc  _vimrc  console_settings_monokai.reg  console_settings_monokai_pro.reg  make_monokai_pro.py  make_templates.py  monokai.vssettings  monokai_pro.vssettings  monokai_pro.yaml  theme_files.json
windows/.config/git/: gitk
windows/.idlerc/: config-highlight.cfg  config-main.cfg
windows/AppData/Local/nvim/: coc-settings.json  init.vim
windows/Documents/CppProjectTemplate/: CMakeLists.txt
windows/Documents/PowerShell/: Microsoft.PowerShell_profile.ps1
windows/Documents/QtProjectTemplate/: CMakeLists.txt.mustache
windows/Documents/QtProjectTemplate/include/: main_window.hpp
windows/Documents/QtProjectTemplate/resources/: gui.ui.mustache
windows/Documents/QtProjectTemplate/src/: main_window.cpp  main_window.ui.mustache  {{PROJECT_NAME}}.cpp
windows/Documents/WindowsPowerShell/: Microsoft.PowerShell_profile.ps1
windows/Documents/WxWidgetsProjectTemplate/: .gitignore
windows/Documents/WxWidgetsProjectTemplate/resources/: gui.xrc.mustache
windows/WxWidgetsProjectTemplate/: CMakeLists.txt.mustache  Readme.md.mustache
windows/monokai_pro/: monokai.vssettings
windows/monokai_pro/.idlerc/: config-highlight.cfg
windows/theme_templates/: console_settings_monokai.reg.mustache  console_settings_monokai_pro.reg.mustache  monokai.vssettings.mustache  monokai_pro.vssettings.mustache
windows/theme_templates/.config/git/: gitk.mustache
windows/theme_templates/.idlerc/: config-highlight.cfg.mustache
(+58 files in other folders)
